[gd_scene load_steps=3 format=3 uid="uid://clhqvwy5maf4u"]

[ext_resource type="Script" uid="uid://bxkgwqvwdelm7" path="res://scripts/ui/hud.gd" id="1_hqnrr"]
[ext_resource type="Texture2D" uid="uid://bcdsud2pw1ig6" path="res://assets/sprites/life.png" id="2_bo48s"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hqnrr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score: 0"

[node name="WaveLabel" type="Label" parent="MarginContainer/VBoxContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Wave: 1"
horizontal_alignment = 1

[node name="LivesContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TopRow/LivesContainer"]
layout_mode = 2
text = "Lives: "

[node name="Life1" type="TextureRect" parent="MarginContainer/VBoxContainer/TopRow/LivesContainer"]
layout_mode = 2
texture = ExtResource("2_bo48s")

[node name="Life2" type="TextureRect" parent="MarginContainer/VBoxContainer/TopRow/LivesContainer"]
layout_mode = 2
texture = ExtResource("2_bo48s")

[node name="Life3" type="TextureRect" parent="MarginContainer/VBoxContainer/TopRow/LivesContainer"]
layout_mode = 2
texture = ExtResource("2_bo48s")
